--- a/instagram/package.json
+++ b/instagram/package.json
@@ -9,12 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "expo": "~46.0.8",
     "expo-status-bar": "~1.4.0",
+    "graphql": "^15.8.0",
     "react": "18.0.0",
+    "react-hook-form": "^7.34.2",
     "react-native": "0.69.4",
     "react-native-appearance": "^0.3.4",
     "react-native-safe-area-context": "4.3.1",
