[graphql] 서버 만들기

--- a/movieql-client/package.json
+++ b/movieql-client/package.json
@@ -4,10 +4,17 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@graphql-yoga/node": "^2.13.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-cli": "^6.26.0",
+    "babel-node": "^0.0.1-security",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "dotenv": "^16.0.1",
     "graphql": "^16.6.0",
+    "graphql-yoga": "^2.13.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -15,7 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "nodemon --exec babel-node src/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/node": "^7.18.10"
   }
 }
