--- a/instagram/package.json
+++ b/instagram/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "nodemon --exec babel-node index.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -11,6 +11,8 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@expo/vector-icons": "^13.0.0",
+    "@graphql-yoga/node": "^2.13.9",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -28,7 +30,8 @@
     "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.18.13",
+    "@babel/node": "^7.18.10"
   },
   "private": true
 }
