--- a/instagram/package.json
+++ b/instagram/package.json
@@ -13,21 +13,29 @@
     "@expo/vector-icons": "^13.0.0",
     "@graphql-yoga/node": "^2.13.9",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/slider": "^4.3.1",
     "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/material-bottom-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "expo": "~46.0.8",
+    "expo-camera": "~12.3.0",
+    "expo-media-library": "~14.2.0",
     "expo-status-bar": "~1.4.0",
     "graphql": "^15.8.0",
     "react": "18.0.0",
     "react-hook-form": "^7.34.2",
     "react-native": "0.69.4",
     "react-native-appearance": "^0.3.4",
+    "react-native-gesture-handler": "^2.6.0",
+    "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
